--- a/figuras.html
+++ b/figuras.html
@@ -11,6 +11,6 @@
         Figuras Geometricas
     </h1>
 
-    <script src="/js/figuras.js"></script>
+    <script src="js/figuras.js"></script>
 </body>
 </html>
