--- a/figuras.html
+++ b/figuras.html
@@ -7,10 +7,29 @@
     <title>Figuras Geometricas / Curso Practico de JS</title>
 </head>
 <body>
-    <h1>
-        Figuras Geometricas
-    </h1>
-
+    <header>
+        <h1>
+           Figuras Geometricas
+        </h1>
+        <p> Este es el primer taller del curso practico de js </p>
+    </header>
+    <section>
+        <h2>
+            Calcula el area y perimetro de un cuadrado
+        </h2>
+        <form>
+            <label>
+                Escribe cuanto vale cada lado de tu cuadrado
+            </label>
+            <input id="InputCuadrado" type="number"\>
+            <button type="button" onclick="calcularPerimetroCuadrado()">
+                Calcular el perimetro
+            </button>
+            <button type="button" onclick="calcularAreaCuadrado()">
+                Calcular el area
+            </button>
+        </form>
+    </section>
     <script src="js/figuras.js"></script>
 </body>
 </html>
