--- a/descuentos.html
+++ b/descuentos.html
@@ -5,12 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porcentajes y descuentos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/descuentos.css">
 </head>
 <body>
-    <h1>
-        Porcentajes y descuentos
-    </h1>
+    <header class="container-fluid">
+        <header class="row">
+            <header class="col-lg-12 col-xs-12">
+                <h1>
+                    Porcentajes y descuentos
+                </h1>
+                <strong></strong>
+                <p>
+                    Este es el segundo taller del curso practico de <strong>JS</strong>
+                </p>
+            </header>
+        </header>
+    </header>
+    <section class="container">
+        <section class="row">
+            <section class="col-lg-5 col-xs-12 producto">
+                <h2>
+                    Calcula el precio a pagar de tus productos con descuento
+                </h2>
+                    <form>
+                        <label for="inputPrice">Escribe el precio de tu producto</label>
+                        <input id="inputPrice" type="number">
 
+                        <br>
+                        
+                        <label for="inputDiscount">Escribe el descuento de tu producto</label>
+                        <input id="inputDiscount" type="number">
+
+                        <br>
+
+                        <label for="inputCoupon">Escribe el nombre de tu coupon</label>
+                        <input id="inputCoupon" type="text">
+
+                        <br>
+
+                        <button type="button" onclick="onClickPriceDiscount()">
+                            Calcular el precio con descuento
+                        </button>
+
+                        <p id="resultPrice"></p>
+                    </form>                
+            </section>
+            <section class="col-lg-4 col-xs-12 producto">
+                <h3>Lista de Cupones</h3>
+                <ul>
+                    <li>
+                        <strong>Cupon c10: </strong> 10% de descuento.
+                    </li>
+                    <li>
+                        <strong>Cupon c20: </strong> 20% de descuento.
+                    </li>
+                    <li>
+                        <strong>Cupon c50: </strong> 50% de descuento.
+                    </li>
+                    <li>
+                        <strong>Cupon e100: </strong> 100% de descuento.
+                    </li>
+                </ul>
+            </section>
+        </section>
+    </section>
+    <footer class="container-fluid">
+        <footer class="row">
+            <footer class="col-lg-12 col-xs-12">
+                <h1>Hecho por</h1>
+                <h2>Lautaro Murua</h2>
+            </footer>
+        </footer>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="/js/descuentos.js"></script>
 </body>
 </html>
