--- a/figuras.html
+++ b/figuras.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras Geometricas / Curso Practico de JS</title>
+    <link rel="stylesheet" href="/css/figuras.css">
 </head>
 <body>
     <header>
